# 2D-Ising-Predictor

./: .gitignore  .to_do.txt  Makefile  Makefile_GPU  Makefile_cluster  Makefile_comm  Makefile_evo  Makefile_old  README.md  calculate_cluster.c  calculate_commitor.cu  calculate_committor.cu  calculate_magnetization.c  cluster_search.f90  cluster_search.mod  compile.sh  create_cluster_set.c  create_cluster_set_v2.c  create_data_set.c  create_evolution_set.c  evolution_committor.cu  gasp.sh  get_version.sh  grid_writer.py  input_reader.c  input_reader.cu  input_reader.h  invoke_pytest.py  io.c  ising.cu  kernels.cu  kernels.h  main.cu  model_wrappers.c  model_wrappers.cu  model_wrappers.h  read_grids.py  test.c  test.sh  to_do.txt  (+4 more)
NN/: 3d_plotting.py  CAM.py  CNN  CNN.py  cluster_data  cluster_data_1  committor_data  committor_data_tmp  data_process.py  evo_data_process.py  evolution_committor_data  evolution_grid_data  loader_test.py  loss_base.npy  loss_lcs.npy  loss_lcs_p.npy  nn_data_process.py  nn_gradient_vis.py  nn_module.py  nn_plotting.py  (+10 more)
pytools/: README.md  __init__.py  conftest.py  pyproject.toml
pytools/pyconf/: generate_conf.ipynb  grid_writer.py  helper.py  main.py  model_types.py
pytools/pyviz/: animate_grid.ipynb  animate_grid.py  grid_reader.py  helper.py
pytools/tests/: conftest.py  test_basics.py  test_cli.py  test_gpu_fill.py  test_helpers.py  test_ingest_config.py  test_manual_fill.py  test_range_ortho.py
pyviz/: pyproject.toml
pyviz/pyconf/: generate_conf.ipynb  helper.py
pyviz/pyviz/: animate_grid.ipynb  animate_grid.py  helper.py
(+119 files in other folders)
