[tool.poetry]
name = "pyviz"
version = "0.1.0"
description = ""
authors = ["Pip Grylls <pip.grylls@warwick.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter = "^1.0.0"
numpy = "==1.23.0"
plotly = "^5.15.0"
pandas = "^2.0.3"
kaleido = "0.2.1"
plotly-gif = "^0.0.4"
numba = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
