[tool.poetry]
name = "pyviz"
version = "0.1.0"
description = ""
authors = ["Pip Grylls <pip.grylls@warwick.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyter = "^1.0.0"
numpy = "==1.23.0"
pandas = "^2.0.3"
kaleido = "0.2.1"
numba = "*"
pygame = "^2.5.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "./tests",
]